# gwsim

./: .gitignore  .gitlab-ci.yml  .ignore_words.txt  .pre-commit-config.yaml  .readthedocs.yaml  .typos.toml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README_calib.md  SECURITY.md  cliff.toml  cspell.json  hatch_build.py  mkdocs.yml  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: CI.yml  ci.yml  codeql.yml  create_tag.yml  documentation.yml  draft_release.yml  publish.yml  publish_testpypi.yml  release.yml  scheduled_release.yml
docs/: basic_usage.rst  example_config.rst  gen_ref_pages.py  generate_ET_data.rst  index.md  index.rst  reading_frames.rst
docs/dev/: architecture.md  contributing.md  troubleshooting.md
docs/user-guide/: cluster.md  configuration.md  examples.md  generating-data.md  installation.md  metadata.md  protocols.md  quickstart.md  reading-data.md  repository.md  reproducibility.md
examples/: .gitignore  glitch_generator.py
examples/CBC_signals/BBH_simulator/: ET_2L_Aligned_BBH_config.yaml  ET_2L_Misaligned_BBH_config.yaml  ET_Triangle_EMR_BBH_config.yaml  ET_Triangle_Sardinia_BBH_config.yaml
examples/CBC_signals/BNS_simulator/: ET_2L_Aligned_BNS_config.yaml  ET_2L_Misaligned_BNS_config.yaml  ET_Triangle_EMR_BNS_config.yaml  ET_Triangle_Sardinia_BNS_config.yaml
examples/default_config/: config.yaml
examples/glitch/gengli/et_2l_aligned/: config.yaml
examples/glitch/gengli/et_2l_misaligned/: config.yaml
examples/glitch/gengli/et_triangle_emr/: config.yaml
examples/glitch/gengli/et_triangle_sardinia/: config.yaml
examples/glitches/gengli_simulator/: ET_2L_Aligned_glitch_config.yaml  ET_2L_Misaligned_glitch_config.yaml  ET_Triangle_EMR_glitch_config.yaml  ET_Triangle_Sardinia_glitch_config.yaml
examples/noise/bilby_gaussian_noise_simulator/: Makefile  config.yaml
examples/noise/colored_noise_simulator/: config.yaml
examples/noise/pycbc_gaussian_noise_simulator/: Makefile  config.yaml
examples/noise/uncorrelated_gaussian_noise_simulator/: ET_2L_Aligned_noise_config.yaml  ET_2L_Misaligned_noise_config.yaml  ET_Triangle_EMR_noise_config.yaml  ET_Triangle_Sardinia_noise_config .yaml  quick_start_config.yaml
src/gwmock/: __main__.py  version.py
src/gwmock/cli/: adapter_orchestration.py  batch.py  config.py  main.py  merge.py  simulate.py  simulate_utils.py  validate.py
src/gwmock/data/: __init__.py
src/gwmock/detector/: __init__.py  base.py  utils.py
src/gwmock/glitch/: __init__.py  base.py  gengli_glitch.py
src/gwmock/mixin/: cbc_population_reader.py  detector.py  population_reader.py  randomness.py  time_series.py  waveform.py
src/gwmock/monitor/: __init__.py  resource.py
src/gwmock/noise/: __init__.py  adapter.py  base.py  colored_noise.py  correlated_noise.py  stationary_gaussian.py
src/gwmock/population/: __init__.py  adapter.py  glitch.py
src/gwmock/repository/: zenodo.py
src/gwmock/signal/: __init__.py  adapter.py  base.py  cbc.py
src/gwmock/simulator/: base.py  seeds.py  state.py
src/gwmock/utils/: download.py  io.py  log.py  population.py  retry.py
src/gwmock/waveform/: __init__.py  factory.py  pycbc_wrapper.py
src/gwsim/: README_calib.md  __init__.py  version.py
src/gwsim/calibration/: calibration.py
src/gwsim/cli/: batch.py  config.py  default_config.py  generate.py  main.py  merge.py  repository.py  simulate.py  simulate_utils.py  validate.py
src/gwsim/data/: __init__.py  time_series.py  time_series_decoder.py  time_series_list.py
src/gwsim/detector/: base.py  utils.py
src/gwsim/detectors/: base.py  test_add_ET_detector_with_PyCBC.py  utils.py
src/gwsim/generator/: base.py  state.py
src/gwsim/glitch/: __init__.py  base.py  gengli_glitch.py
src/gwsim/mixin/: detector.py  population_reader.py  time_series.py
src/gwsim/monitor/: resource.py
src/gwsim/noise/: __init__.py  base.py  bilby_stationary_gaussian.py  colored.py  colored_noise.py  correlated_noise.py  pycbc_stationary_gaussian.py  stationary_gaussian.py  white_noise.py
src/gwsim/population/: __init__.py  base.py
src/gwsim/repository/: zenodo.py
src/gwsim/signal/: __init__.py  base.py  cbc.py  cbc_signal.py
src/gwsim/simulator/: base.py  cbcsignal.py  generator.py  state.py
src/gwsim/tools/: default_config.py  generate.py  utils.py
src/gwsim/utils/: 2L_ET_geometry.py  __init__.py  et_2l_geometry_tmp.py  io.py  log.py  population.py  random.py  retry.py  triangular_ET_geometry.py  triangular_et_geometry.py
src/gwsim/waveform/: pycbc_fd_wrapper.py  pycbc_wrapper.py
src/gwsim/waveforms/: cbc.py
tests/: smoke_test.py  test_import_modules.py
tests/cli/: test_cli_config.py  test_cli_orchestration.py  test_cli_simulate.py  test_simulate.py  test_validate.py
tests/cli/utils/: test_backend_resolver.py  test_checkpoint.py  test_cli_utils_config.py  test_cli_utils_config_resolution.py  test_cli_utils_metadata.py  test_cli_utils_template.py  test_config.py  test_metadata.py  test_simulation_plan.py
tests/data/serialize/: test_decoder.py  test_encoder.py  test_serializable.py
tests/data/time_series/: test_data_time_series_time_series.py  test_inject.py  test_time_series.py  test_time_series_list.py
tests/detector/: test_base_detector.py
tests/mixin/: test_cbc_population_reader_mixin.py  test_detector_mixin.py  test_population_reader_mixin.py  test_time_series_mixin.py
tests/monitor/: test_monitor_resource.py
tests/noise/: test_adapter.py  test_colored_noise.py  test_correlated_noise.py
tests/population/: test_adapter.py
tests/repository/: test_zenodo.py
tests/signal/: test_adapter.py  test_base_signal.py  test_cbc_signal.py  test_signal_base.py  test_signal_cbc.py
tests/simulator/: test_base_simulator.py  test_seeds.py
tests/simulator/mixin/: test_detector_mixin.py  test_time_series_mixin.py
tests/tools/: test_main.py
tests/utils/: test_datetime_parser.py  test_download.py  test_io.py  test_utils_io.py
tests/waveform/: test_pycbc_waveform_wrapper.py  test_pycbc_waveform_wrapper_integration.py
(+99 files in other folders)
