[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "gwmock"
authors = [{ name = "Isaac C. F. Wong", email = "chunfung.wong@kuleuven.be" }]
description = "A Python package for simulating gravitational wave detector data for mock data challenges."
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Astronomy",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12,<3.14"
dynamic = ["version"]
dependencies = [
  "gwmock-signal>=0.5.0",
  "gwmock-noise>=0.1.2",
  "gwmock-pop>=0.6.0",
  "typer>=0.25.1",
  "tqdm>=4.67.3",
  "h5py>=3.16.0",
  "gengli>=0.2.0",
  "bilby>=2.8.0",
  "pydantic>=2.13.3",
  "pymap3d>=3.2.0",
  "psutil>=7.2.2",
]

[dependency-groups]
dev = [
  "bandit[toml]>=1.9.4",
  "pre-commit>=4.6.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "pytest>=9.0.3",
  "pytest-github-actions-annotate-failures>=0.4.0",
]
docs = ["zensical>=0.0.38", "mkdocstrings-python>=2.0.3"]
build = ["hatch>=1.16.5"]
release = ["git-cliff>=2.13.1"]

[project.scripts]
gwmock = "gwmock.cli.main:app"

[project.urls]
Documentation = "https://leuven-gravity-institute.github.io/gwmock"
Source = "https://github.com/Leuven-Gravity-Institute/gwmock"
Tracker = "https://github.com/Leuven-Gravity-Institute/gwmock/issues"

[tool.uv-dynamic-versioning]
vcs = "git"      # default
style = "semver" # or pep440, semver, etc.

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/gwmock"]

# Register the custom build hook
[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",                # Include the source code
  "/examples/**/*.yaml", # Include only YAML files from examples
  "/tests",              # Include tests for source distributions
  "/README.md",
  "/pyproject.toml",
  "/hatch_build.py",     # Include the build hook itself
]

[tool.bandit]
exclude_dirs = ["build", "dist", "tests", "scripts"]
number = 4
recursive = true
targets = "src"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 0

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
addopts = [
  "--cov=gwmock",
  "--cov-report=xml",
  "--cov-report=term",
  "--junitxml=test-results.xml",
  "--cov-append",
  "-m",
  "not integration",
]
pythonpath = ["src"]
testpaths = "tests"
junit_family = "xunit2"
markers = [
  "integration: marks as integration test",
  "notebooks: marks as notebook test",
  "gpu: marks as gpu test",
  "spark: marks tests which need Spark",
  "slow: marks tests as slow",
  "unit: fast offline tests",
]

[tool.ruff]
line-length = 120 # Matches Black's default
target-version = "py310" # Align with CI (3.10–3.12) and requires-python (>=3.8.1)
lint.extend-select = [
  "E",
  "F",
  "W",   # pycodestyle errors and warnings
  "I",   # isort rules
  "UP",  # pyupgrade rules
  "C90", # McCabe complexity
  "N",   # PEP8 naming
  "B",   # Bugbear (opinionated checks)
  "A",   # Flake8-builtins
  "C4",  # Flake8-comprehensions
  "PT",  # Flake8-pytest
  "RUF", # Ruff-specific rules
  "PL",  # Add pylint rules for fuller coverage
  "SIM", # Similarities
  "T10", # Debugger statements
]
lint.ignore = [
  "E501", # Line length (handled by formatter)
  "C901", # Disable overly strict complexity checks (optional, adjust as needed)
]
lint.pylint.max-args = 10
fix = true # Enable autofix
lint.unfixable = [] # List rules that should not be autofixed, if any
exclude = ["docs/conf.py"]

[tool.ruff.format]
quote-style = "double"       # Use double quotes for strings
indent-style = "space"       # Use spaces for indentation
docstring-code-format = true # Format code in docstrings
